php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #24871 Aggregation is not aggregating all methods properly.
Submitted: 2003-07-30 09:00 UTC Modified: 2003-07-31 21:17 UTC
From: php at webdevelopers dot cz Assigned:
Status: Closed Package: Class/Object related
PHP Version: 4.3.1 OS: Red Hat Linux 7.3
Private report: No CVE-ID: None
 [2003-07-30 09:00 UTC] php at webdevelopers dot cz
Description:
------------
aggrgate() does not aggregate the method that has the name similar to the name of the constructor...?

Reproduce code:
---------------
<?php

class a {
	function a() {
	    echo "CREATED A;";
	}

}
class b {
	function bb() {
	    echo "BB();";
	}

	function xbb() {
	    echo "XBB();";
	}
}

$a=new a();
aggregate($a, "b");
$a->xbb();
$a->bb();

?>


Expected result:
----------------
CREATED A;XBB();BB();

Actual result:
--------------
CREATED A;XBB()

Fatal error: Call to undefined function: bb() in test.php on line 28

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-07-31 21:17 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC