Fixed bug #24871 (methods misidentified as constructors)