ext/standard/aggregation.c
@@ -114,7 +114,7 @@ static void aggregate_methods(zend_class_entry *ce, zend_class_entry *from_ce, i
 
 			/* We do not aggregate:
 			 * 1. constructors */
-			if (!strncmp(func_name, from_ce->name, MIN(func_name_len-1, from_ce->name_length)) ||
+			if (!strncmp(func_name, from_ce->name, MAX(func_name_len-1, from_ce->name_length)) ||
 			/* 2. private methods (heh, like we really have them) */
 				func_name[0] == '_' ||
 			/* 3. explicitly excluded methods */
